--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </header>
       <main>
    
+        <div class="colum01">
 
           <div class="card">
             <img
@@ -36,8 +37,10 @@
             />
             <h2><span>Web Site</span>web.com</h2>
           </div>
-
+        </div>
+<div class="colum02">
           <div class="card">
+
             <img
               src="https://images.unsplash.com/photo-1588508065123-287b28e013da?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8ZWxlY3Ryb25pY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60"
               alt="Imagem de uma pessoa mechendo no computador"
@@ -51,6 +54,7 @@
             />
             <h2><span>Fotografia</span>comd.com</h2>
           </div>
+        </div>
         </div>
       </main>
     </div>
